--- a/produtos.html
+++ b/produtos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     </head>
 <body>
         <header> 
+            <div class="caixa">
                 <h1><img src="logo.png"></h1>
             <nav>
                 <ul>
@@ -14,6 +15,31 @@
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
                 </ul>
+            </nav>
+            </div>
         </header>
+        <main> 
+            <ul>
+                <li>
+                    <h2>cabelo</h2>
+                    <img src="cabelo.jpg">
+                    <p>Na tesoura ou máquina, como o cliente preferir</p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>barba</h2>
+                    <img src="barba.jpg">
+                    <p>Corte e desenho profissional de barba</p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>barba + cabelo</h2>
+                    <img src="barba+cabelo">
+                    <p></p>
+                    <p></p>
+                </li>
+            </ul>
+        </main>  
+        <li>  
  </body>
 </html>
