--- a/produtos.html
+++ b/produtos.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -9,34 +9,34 @@
         <header> 
             <div class="caixa">
                 <h1><img src="logo.png"></h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contatos.html">Contatos</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
         <main> 
-            <ul>
+            <ul class="produtos">
                 <li>
-                    <h2>cabelo</h2>
+                    <h2>Cabelo</h2>
                     <img src="cabelo.jpg">
-                    <p>Na tesoura ou máquina, como o cliente preferir</p>
-                    <p></p>
+                    <p class="produto-descrição">Na tesoura ou máquina, como o cliente preferir</p>
+                    <p class="produto-preço">R$ 25,00</p>
                 </li>
                 <li>
-                    <h2>barba</h2>
+                    <h2>Barba</h2>
                     <img src="barba.jpg">
-                    <p>Corte e desenho profissional de barba</p>
-                    <p></p>
+                    <p class="produto-descrição">Corte e desenho profissional de barba</p>
+                    <p class="produto-preço">R$ 18,00</p>
                 </li>
                 <li>
-                    <h2>barba + cabelo</h2>
-                    <img src="barba+cabelo">
-                    <p></p>
-                    <p></p>
+                    <h2>Cabelo + Barba</h2>
+                    <img src="cabelo+barba.jpg">
+                    <p class="produto-descrição">Pacote completo de cabelo e barba</p>
+                    <p class="produto-preço">R$ 35,00</p>
                 </li>
             </ul>
         </main>  
